structured functions for dicom metadata processing and batching

--- a/src/d01_data/aws_batch/Dockerfile
+++ b/src/d01_data/aws_batch/Dockerfile
@@ -12,4 +12,4 @@ ADD metadata_images.py /
 ADD credentials /root/.aws/
 ADD credentials_db.json /
 
-CMD ["python", "./metadata_images.py"]
+CMD ["python", "./dicom_batch.py"]
