ignoring tf ckpt files

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,7 @@ venv.bak/
 
 
 .spyproject
+
+# dave retrain stuff
+src/d03_classification/echo_deeplearning/models/vgg_13/m1_usal/train/
+src/d03_classification/echo_deeplearning/models/vgg_13/m1_usal/val/
