--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-ipython==4.0.2 #>=7.0.0, <8.0
+ipython>=4.0, <8.0
 jupyter>=1.0.0, <2.0
 nbstripout==0.3.3
 pandas==0.25.0
 scikit-learn==0.21.3
-sqlalchemy
-pyyaml
-pydicom
-black
-flake8
-shapely
-pyinquirer
-tqdm
+sqlalchemy>=1.2
+pyyaml>=3.12
+pydicom>=1.3
+black>=19.0
+shapely>=1.6
+pyinquirer>=1.0
+tqdm>=4.34
