updated readme and adapted usr files

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ conf/local/**
 
 # ignore potentially sensitive credentials files
 conf/**/*credentials*
+!conf/examples/**
 
 # ignore everything in the following folders
 data/**
