--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-ipython>=4.0, <8.0
+ipython>=4.0, <6.0
 jupyter>=1.0.0, <2.0
 nbstripout==0.3.3
 pandas==0.25.0
@@ -6,7 +6,7 @@ scikit-learn==0.21.3
 sqlalchemy>=1.2
 pyyaml>=3.12
 pydicom>=1.3
-black>=19.0
+black>=19.3b0
 shapely>=1.6
 pyinquirer>=1.0
 tqdm>=4.34
